# Innovat-EPAM-Portal

./: .gitignore  PROJECT_SUMMARY.md  README.md  debug_imports.py  migrate_db.py  pyproject.toml  recreate_todos.py  seed_admin.py  test_output.txt  test_output_utf8.txt
.specify/memory/: PLAN-AUTH-001.md  PLAN-EVAL-001.md  PLAN-FE-001.md  PLAN-IDEA-001.md  PLAN-UILAYOUT-001.md  SPEC-AUTH-001.md  SPEC-EVAL-001.md  SPEC-FE-001.md  SPEC-IDEA-001.md  SPEC-PROF-001.md  SPEC-SOCIAL-001.md  SPEC-UILAYOUT-001.md  SPEC-WS-001.md  TASKS-AUTH-001.md  TASKS-FE-001.md  TASKS-IDEA-001.md  TASKS-PROF-001.md  TASKS-SOCIAL-001.md  constitution.md
docs/adr/: ADR-001-TECH-STACK.md
scripts/: migrate_v2.py
src/app/: main.py
src/app/api/: admin.py  auth.py  deps.py  events.py  ideas.py  notifications.py  todos.py  users.py
src/app/core/: security.py
src/app/crud/: event.py  idea.py  notification.py  todo.py  user.py
src/app/db/: session.py
src/app/models/: event.py  idea.py  notification.py  todo.py  user.py
src/app/schemas/: event.py  idea.py  notification.py  stats.py  todo.py  user.py
src/innovat_epam_portal/: __init__.py
static/: app.js  index.html  style.css
tests/integration/: conftest.py  test_admin.py  test_admin_users.py  test_auth.py  test_evaluation.py  test_evaluation_identity.py  test_events.py  test_ideas.py  test_ideas_extended.py  test_profile_social.py  test_todos.py  test_users.py
